docs: add README and refactor UI components, fix requirements

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,10 @@
 streamlit
 pandas
-joblib
-requests
-plotly
-fastapi
-uvicorn
-pydantic
 scikit-learn
 utide
-openmeteo-requests
-retry-requests
-pysheds
-rasterio
-geopandas
-shapely
-scipy
-earthengine-api
-google-auth
+matplotlib
+requests
+numpy
 Pillow
+openpyxl
+plotly
